# CMU_MLCourse

./: .gitignore  README.md
HW1/: Q2-6-6.cpp  decisionStump.cpp
HW2/: cleanup.sh  decisionTree.cpp  inspection.cpp  runDecision.sh
HW4/: CMakeLists.txt  autorun.sh  feature.cpp
HW4/src/: lr.cpp
HW5/: CMakeLists.txt  README.md  autorun.sh
HW5/src/: neuralnet.cpp  neuralnet.cpp~
